tests/machine/x/cpp/substring_builtin.error
line 15: /workspace/mochi/tests/machine/x/cpp/substring_builtin.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/substring_builtin.cpp:15:11: error: ‘substring’ was not declared in this scope
   15 |     print(substring("mochi", 1, 4));
      |           ^~~~~~~~~

 14 | int main() {
 15 |     print(substring("mochi", 1, 4));
 16 |     return 0;
